Fix overflow when picker is shown

--- a/public/assets/src/angular-media-picker/less/components/_picker.less
+++ b/public/assets/src/angular-media-picker/less/components/_picker.less
@@ -1,3 +1,11 @@
+.media-picker {
+  bottom: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
 .media-picker-body {
   height: auto;
   top: 50px;
